<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 Android Shuffle Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:padding="4dip"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    >

	<TableRow>
        
        <LinearLayout
			android:id="@+id/appearance_layout" 
    		android:orientation="vertical" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_span="2"
			style="@style/list">
		</LinearLayout>
        
        
	</TableRow>
	
	<TableRow>
        
        <LinearLayout
    		android:orientation="vertical" 
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:layout_span="2"
			android:background="@drawable/box">
		</LinearLayout>
            
        	
	</TableRow>	
	
	<TableRow>
	    <TextView
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
			android:layout_span="2"
			android:paddingTop="10dip"
	        android:text="@string/display_task_list_title"
            style="@style/preferences_label"
	        />
	</TableRow>	

	<TableRow
        android:paddingTop="8dip">	        
	        
	    <CheckBox android:id="@+id/display_context"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:text="@string/context_name_title"
		    />

	    <CheckBox android:id="@+id/display_due_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:text="@string/due_date_title"
	    />

	</TableRow>	

	<TableRow
        android:paddingTop="5dip"
	>	        

	    <CheckBox android:id="@+id/display_icon"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:text="@string/context_icon_title"
	    />


	    <CheckBox android:id="@+id/display_project"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:text="@string/project_title"
	    />
	</TableRow>	

	<TableRow
        android:paddingTop="5dip"
	>	        

	    <CheckBox android:id="@+id/display_details"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:text="@string/details_title"
	    />

    </TableRow>
			
</TableLayout>

